namespace PIS.Models
{
    public class Project
    {
        public Int16 Id { get; set; }
        public String Title { get; set; }
        public Decimal Budget { get; set; }
    }
}
