@startuml
title PIS

package PIS.Models
{
    class Project
    {
        +Id:int
        +Title:String
        +Budget:Decimal
    }
}

package PIS.Controllers 
{
    class ProjectManagerController{
        - _projectService : IProjectService
        + Index() : IActionResult
        + Details(id : int) : IActionResult
        + Create() : IActionResult
        + Create(project : Project) : IActionResult
        + Update(id : int) : IActionResult
        + Update(project : Project) : IActionResult
        + Delete(id : int) : IActionResult
        + DeleteConfirmed(id : int) : IActionResult
    }
}

package PIS.Services
{
    class ProjectManager
    {
        - _list : List<Project>
        + GetAll() : IEnumerable<Project>
        + GetById(id : int) : Project
        + Create(project : Project) : Project
        + Update(project : Project) : bool
        + Delete(id : int) : bool
        + Search(query : string) : IEnumerable<Project>
    }
}

package PIS.Services.Contracts
{
    interface IProjectService
    {
        + GetAll() : IEnumerable<Project>
        + GetById(id : int) : Project
        + Create(project : Project) : Project
        + Update(project : Project) : bool
        + Delete(id : int) : bool
        + Search(query : string) : IEnumerable<Project>
    }
}

package PIS.Repositories
{
    class RepositoryContext
    {
        + Projects : DbSet<Project>
    }
}

class Controller{}
class DbContext{}

ProjectManager "1" *-- "*" Project : manages
ProjectManagerController -up-|> Controller : "<<extends>>"
ProjectManagerController ..> IProjectService : "uses"
ProjectManager .up.|> IProjectService : "<<implements>>"
RepositoryContext -up-|> DbContext : "<<extends>>"
RepositoryContext "1" o-- "*" Project : "DbSet<Project>"

hide empty members
@enduml
